--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/material-top-tabs": "^6.4.0",
+    "@react-navigation/native": "^6.0.16",
     "expo": "~46.0.16",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-lightweight-responsive": "^0.0.6",
+    "react-native-pager-view": "5.4.24",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-tab-view": "^3.3.2",
     "react-native-web": "~0.18.7",
     "styled-components": "^5.3.6"
   },
